tests/typing/bad/testfile-unbound_class1-1.scala
class A extends B {}
object Main { def main(args: Array[String]) { } }
